--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -w src --exec ts-node src/index.ts"
+    "start": "cross-env NODE_ENV=production && nodemon -w src --exec ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.0.0",
