--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,12 +6,12 @@
     "password" : "postgres",
     "synchronize": true,
     "logging": true,
-    "entities": ["src/entity/**/*.ts"],
-    "migrations": ["src/migration/**/*.ts"],
-    "subscribers": ["src/subscriber/**/*.ts"],
+    "entities": ["src/api/entity/**/*.ts"],
+    "migrations": ["src/api/migration/**/*.ts"],
+    "subscribers": ["src/api/subscriber/**/*.ts"],
     "cli": {
-        "entitiesDir": "src/entity",
-        "migrationsDir": "src/migration",
-        "subscribersDir": "src/subscriber"
+        "entitiesDir": "src/api/entity",
+        "migrationsDir": "src/api/migration",
+        "subscribersDir": "src/api/subscriber"
     }
 }
