--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "^13.7.7",
     "apollo-link-ws": "^1.0.20",
     "apollo-server": "^2.15.0",
-    "apollo-server-express": "^2.10.1",
+    "apollo-server-express": "^2.15.0",
     "aws-sdk": "^2.640.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
@@ -23,8 +23,10 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "google-auth-library": "^6.0.0",
     "gql": "^1.1.2",
+    "graphiql": "^1.0.2",
     "graphql-tools": "^4.0.8",
     "isemail": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
