--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "selenium": "^2.20.0",
+    "sqlite3": "^4.2.0",
     "subscriptions-transport-ws": "^0.9.16",
     "tslint": "^6.1.2",
     "type-graphql": "^0.17.6",
