--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "google-auth-library": "^6.0.0",
     "gql": "^1.1.2",
     "graphiql": "^1.0.2",
+    "graphql-postgres-subscriptions": "^1.0.5",
     "graphql-tools": "^4.0.8",
     "isemail": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -37,6 +38,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-schedule": "^1.3.2",
+    "oauth": "^0.9.15",
     "path": "^0.12.7",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
